--- a/css/default.css
+++ b/css/default.css
@@ -16,6 +16,13 @@ header{
   min-width: 500px;
   float: left;
 }
+.box{
+  backgroundcolor: peachpuff;
+  color: lightcyan;
+  width: 240px;
+  margin: 5px;
+  float: left;
+}
 #main1{
   background-color:coral;
   width: 500px;
