--- a/css/default.css
+++ b/css/default.css
@@ -6,9 +6,14 @@
 
 body{
   background-color: lemonchiffon;
+  margin: 48px 0 0 0;
 }
 header{
   background-color:teal;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
 }
 #main{
   background-color:cadetblue;
@@ -18,28 +23,30 @@ header{
 }
 .box{
   background-color: peachpuff;
-  color: lightcyan;
+  color: black;
   width: 240px;
   height: 80px;
   margin: 5px;
   float: left;
+  overflow: hidden;
 }
-#main1{
-  background-color:coral;
-  width: 500px;
-  float: left;
-}
-#main2{
-  background-color:steelblue;
-  width: 500px;
-  float: left;
-}
+
 aside{
 background-color:seagreen;
   width: 200px;
   float: right;
+  position: relative;
+  top: 20px;
+  right: 10px;
 }
 footer{
   background-color:yellowgreen;
   clear: both;
 }
+#good_picture{
+  width: 24px;
+  position: absolute;
+  left: 50px;
+  top: 50px;
+}
+
